src/objects/CustomerAgreement__c.object
<CustomObject>
    <description>Initial purpose: The LAB sales reps need to have customer agreements (Direct Discounts, Bonus Agreements, Individual Agreements)  available in Salesforce for their customers (stored in SAP ERP Hanau. Local analysts can upload the discounts by themselves waiting for a future integration to be built.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Agreements</relationshipLabel>
        <relationshipName>Customer_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3D Imaging</fullName>
                </value>
                <value>
                    <fullName>ATLANTIS</fullName>
                </value>
                <value>
                    <fullName>CEREC Equipment</fullName>
                </value>
                <value>
                    <fullName>Consumables</fullName>
                </value>
                <value>
                    <fullName>Digital Group</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Digital Solutions</fullName>
                </value>
                <value>
                    <fullName>Endentulous</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Equipment &amp; Imaging</fullName>
                </value>
                <value>
                    <fullName>Extra Oral Imaging</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>InLab</fullName>
                </value>
                <value>
                    <fullName>Intra Oral Imaging</fullName>
                </value>
                <value>
                    <fullName>Midwest Equipment</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Prosthetics</fullName>
                </value>
                <value>
                    <fullName>Regenerative</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
                <value>
                    <fullName>Treatment Centers</fullName>
                </value>
                <value>
                    <fullName>Class II</fullName>
                </value>
                <value>
                    <fullName>Single Unit Crown</fullName>
                </value>
                <value>
                    <fullName>Root To Crown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConditionTerms__c</fullName>
        <label>Condition Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PaymentAgreement__c</fullName>
        <label>Payment Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitofMeasure__c</fullName>
        <inlineHelpText>i.e. EUR / G / ...</inlineHelpText>
        <label>Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidFrom__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidTo__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Customer Agreement</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Customer Agreement #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Agreements</pluralLabel>
    <recordTypes>
        <fullName>Bonus_agreement</fullName>
        <active>true</active>
        <description>(i.e. cashback after a defined period)</description>
        <label>Bonus agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Direct_Discount</fullName>
        <active>true</active>
        <description>(i.e. product group level or article numbers)</description>
        <label>Direct Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_agreement</fullName>
        <active>true</active>
        <label>Individual agreement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>